--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/ReactFrontend/node_modules
 /.pnp
 .pnp.js
 venv
@@ -23,3 +23,4 @@ __pychache__
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+node_modules
