--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,10 +1,12 @@
 azure-cognitiveservices-vision-computervision==0.6.0
 azure-common==1.1.25
+cachelib==0.1.1
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
 Flask-Cors==1.10.3
+Flask-Session==0.3.2
 idna==2.10
 install==1.3.3
 isodate==0.6.0
@@ -15,6 +17,7 @@ msrest==0.6.19
 oauthlib==3.1.0
 Pillow==7.2.0
 python-dotenv==0.14.0
+redis==3.5.3
 requests==2.24.0
 requests-oauthlib==1.3.0
 six==1.15.0
