--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -14,7 +14,7 @@ Jinja2==2.11.2
 MarkupSafe==1.1.1
 msrest==0.6.19
 oauthlib==3.1.0
-Pillow==7.2.0
+Pillow
 python-dotenv==0.14.0
 redis==3.5.3
 requests==2.24.0
